instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:20: error: not found: value lft
lft()
^InstructionsDrawG:21: error: not found: value forwar
forwar() //fin du G//
^